# wraithlib

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/sql/: save_counter.sql
examples/: main_menu.rs  saving.rs  server.rs  simple.rs  ui_elements.rs  uuid.rs
examples/main_menu/: game.rs  main.rs  server.rs  ui.rs
examples/server/: client.rs  main.rs  server.rs
examples/sql/: save_counter.sql
src/: camera.rs  gamestates.rs  lib.rs  splash.rs
src/client/: gamestates.rs  mod.rs  splash.rs  ui_animations.rs
src/client/assets/: conditions.rs  mod.rs  resources.rs  systems.rs
src/client/gamestates/: mod.rs  resources.rs  systems.rs
src/client/loading_screen/: components.rs  conditions.rs  events.rs  mod.rs  resources.rs  systems.rs
src/client/main_menu/: components.rs  events.rs  mod.rs  resources.rs  server_list.sql  systems.rs  ui.rs  view.rs
src/client/networking/: events.rs  mod.rs  resources.rs  systems.rs
src/client/splash/: components.rs  mod.rs  resources.rs  systems.rs
src/client/ui/: mod.rs  scroll_pane.rs  text_input.rs  tweening.rs
src/client/ui/elements/: button.rs  canvas.rs  div.rs  mod.rs  screen.rs  scroll_pane.rs  text.rs  text_input.rs
src/common/: mod.rs
src/common/files/: blobs.rs  file_system.rs  mod.rs  systems.rs
src/common/networking/: mod.rs  packets.rs  protocol.rs
src/common/uuid/: components.rs  mod.rs  pointer.rs  system_param.rs
src/server/: gamestates.rs  mod.rs
src/server/gamestates/: mod.rs  resources.rs  systems.rs
src/server/networking/: components.rs  events.rs  mod.rs  systems.rs
