[package]
name = "wraithlib"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.0", default-features = false }
bevy_renet = { version = "0.0.9", optional = true }
bevy_tweening = { version = "0.8.0", optional = true }
bincode = { version = "1.3.3", optional = true }
lazy_static = "1.4.0"
typetag = { version = "0.2.13", optional = true }
uuid = { version = "1.5.0", features = ["v4"], optional = true }
rusqlite = { version = "0.29.0", features = ["bundled"], optional = true }
include-sqlite-sql = { version = "0.2.1", optional = true }

[features]
default = ["uuid", "files"]
client = [
  "dep:bevy_tweening",
  "bevy/animation",
  "bevy/bevy_animation",
  "bevy/bevy_asset",
  "bevy/bevy_audio",
  "bevy/bevy_core_pipeline",
  "bevy/bevy_gilrs",
  "bevy/bevy_gizmos",
  "bevy/bevy_gltf",
  "bevy/bevy_pbr",
  "bevy/bevy_render",
  "bevy/bevy_scene",
  "bevy/bevy_sprite",
  "bevy/bevy_text",
  "bevy/bevy_ui",
  "bevy/bevy_winit",
  "bevy/hdr",
  "bevy/ktx2",
  "bevy/multi-threaded",
  "bevy/png",
  "bevy/tonemapping_luts",
  "bevy/vorbis",
  "bevy/x11",
  "bevy/zstd",
]
server = ["bevy/multi-threaded", "networking"]
dynamic = ["bevy/dynamic_linking"]
uuid = ["dep:uuid"]
networking = ["dep:bevy_renet", "dep:typetag", "dep:bincode"]
files = ["dep:rusqlite", "dep:include-sqlite-sql"]

[[example]]
name = "saving"
required-features = ["files"]

[[example]]
name = "main_menu"
required-features = ["client"]

[[example]]
name = "uuid"
required-features = ["uuid"]
