[package]
name = "wraithlib"
version = "0.1.0"
edition = "2021"
exclude = ["/assets", "/saves", "/examples"]

[dependencies]
bevy = { version = "0.12.0", default-features = false }

bevy_tweening = { version = "0.9.0", optional = true }

bevy_renet = { version = "0.0.10", optional = true }
bincode = { version = "1.3.3", optional = true }
typetag = { version = "0.2.13", optional = true }

lazy_static = "1.4.0"
uuid = { version = "1.5.0", features = ["v4"], optional = true }

rusqlite = { version = "0.30.0", features = ["bundled"], optional = true }
include-sqlite-sql = { version = "0.2.1", optional = true }

[features]
default = ["uuid", "files"]
client = ["ui", "bevy/default"]
server = ["bevy/multi-threaded", "networking"]
dynamic = ["bevy/dynamic_linking"]
uuid = ["dep:uuid"]
networking = ["dep:bevy_renet", "dep:typetag", "dep:bincode"]
files = ["dep:rusqlite", "dep:include-sqlite-sql"]
ui = ["dep:bevy_tweening"]

[[example]]
name = "saving"
required-features = ["files"]

[[example]]
name = "ui_elements"
required-features = ["client"]

[[example]]
name = "main_menu"
required-features = ["client"]

[[example]]
name = "uuid"
required-features = ["uuid"]
