[package]
name = "wraithlib"
version = "0.1.0"
edition = "2021"
exclude = ["/assets", "/saves", "/examples"]

[dependencies]
bevy = { version = "0.12.1", default-features = false }

bevy_tweening = { version = "0.9.0", optional = true }
bevy_wh_elements = { git = "https://github.com/TheDudeFromCI/bevy_wh_elements", optional = true }

bevy_wh_net = { git = "https://github.com/Wraithaven-Games/bevy_wh_net", optional = true }
serde = { version = "1.0.193", optional = true }
typetag = { version = "0.2.15", optional = true }

lazy_static = "1.4.0"
uuid = { version = "1.5.0", features = ["v4"], optional = true }

rusqlite = { version = "0.30.0", features = [
  "bundled",
  "blob",
], optional = true }
include-sqlite-sql = { version = "0.2.1", optional = true }

[features]
default = ["uuid", "files"]
client = ["ui", "bevy/default", "uuid"]
server = ["bevy/multi-threaded", "networking"]
dynamic = ["bevy/dynamic_linking"]
uuid = ["dep:uuid"]
networking = ["dep:bevy_wh_net", "dep:serde", "dep:typetag"]
files = ["dep:rusqlite", "dep:include-sqlite-sql"]
ui = ["dep:bevy_tweening", "dep:bevy_wh_elements"]

[[example]]
name = "saving"
required-features = ["files"]

[[example]]
name = "main_menu"
required-features = ["client"]

[[example]]
name = "uuid"
required-features = ["uuid"]
